# intentfoundry

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
app/api/v1/: deps.py  router.py
app/core/: config.py
app/db/: database.py
app/models/: base.py  domain.py
app/schemas/: schemas.py
app/services/: auth_service.py  context_service.py  fitness_service.py  telemetry_service.py
app/static/: index.html
app/static/assets/: Architecture-B4YanCFH.js  Architecture-BDdhGr8Q.js  Architecture-D5rpO4TC.js  Architecture-D8OulcME.js  Architecture-DHIbvqdf.js  Architecture-Dd8Nt1OV.js  Auth-4tJzTYAh.js  Auth-9KPNywnJ.js  Auth-AaB1DxAc.js  Auth-Cm7tSnAU.js  Auth-CwVMnheg.js  Auth-fNdTbGjW.js  Canvas-5gM54ffB.js  Canvas-B0vhPXM_.js  Drawer-0I7vpaK-.js  Drawer-BkiF_UfT.js  Drawer-BzGEb1l3.js  Intent-BNYg6ZUl.js  Intent-BkC4-gxV.js  Intent-Ct7h7gvj.js  Intent-CvRCV_go.js  Intent-D2y5rzK9.js  Intent-DKTs-WYd.js  Landing-0Sp1s2uf.js  Landing-2gLgDGH6.js  Landing-BQkmNB7h.js  Landing-DuS5dpzu.js  Loop-BywEySpn.js  Loop-CeFxqQHp.js  Loop-Cp6PDaQt.js  Loop-DBp-tI-J.js  Loop-NvAgE0c3.js  Loop-WxcKipS5.js  Overview-57-YcE4J.js  Overview-B2DHgmaR.js  Overview-B7I5KN_J.js  Overview-BGuzVfPM.js  Overview-C0q5mAg5.js  Overview-DM4jOtYB.js  Projects-BzmV5z8A.js  (+37 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: canvasApi.ts  client.ts
frontend/src/pages/: Auth.tsx  (+9 more)
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_context_service.py  test_domain_models.py  test_fitness_service.py  test_schemas.py  test_services.py  test_telemetry_service.py
(+39 files in other folders)
